--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -3,13 +3,10 @@
 name: Generate Snake
 
 # Controls when the action will run. This action runs every 6 hours.
-
 on:
   schedule:
-      # every 6 hours
-    - cron: "0 */6 * * *"
+    - cron: "0 */6 * * *" # every 6 hours
 
-# This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
 
 # The sequence of runs in this workflow:
@@ -22,10 +19,10 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
 
-    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
-      - uses: actions/checkout@v2
+      # Checks repo under $GITHUB_WORKSHOP, so your job can access it
+      - uses: actions/checkout@v4
 
-    # Generates the snake  
+      # Generates the snake  
       - uses: Platane/snk@master
         id: snake-gif
         with:
@@ -34,9 +31,25 @@ jobs:
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-     # show the status of the build. Makes it easier for debugging (if there's any issues).
+      # Show the status of the build. Makes it easier for debugging (if there's any issues).
       - run: git status
 
+      # Push the changes
+      - name: Push changes
+        run: |
+          git config --global user.email "you@example.com"
+          git config --global user.name "Your Name"
+          git add dist/github-contribution-grid-snake.*
+          git commit -m "Update contribution snake"
+          git push origin master --force
+
+      - uses: crazy-max/ghaction-github-pages@v3
+        with:
+          # The output branch we mentioned above
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # Push the changes
       - name: Push changes
         uses: ad-m/github-push-action@master
