--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -40,7 +40,7 @@ jobs:
           git config --global user.email "you@example.com"
           git config --global user.name "Your Name"
           git add dist/github-contribution-grid-snake.*
-          git commit -m "Update contribution snake"
+          git commit -m "Update contribution snake" || echo "No changes to commit"
           git push origin master --force
 
       - uses: crazy-max/ghaction-github-pages@v3
@@ -50,13 +50,6 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # Push the changes
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
